<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/sityOfUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintSelectSity">
    </EditText>

    <CheckBox
        android:id="@+id/windSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WindSpeed">
    </CheckBox>

    <CheckBox
        android:id="@+id/pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pressure">
    </CheckBox>

    <Button
        android:id="@+id/ButtonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonOk"
        android:gravity="center"/>



</LinearLayout>