<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="363dp"
        android:layout_height="240dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonGW"
        app:layout_constraintTop_toBottomOf="@+id/btnOpewWiki" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_weather_round" />

    <Button
        android:id="@+id/buttonGW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/ButtonGetWeather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnSelectSity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/btnSelectSity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonGW" />

    <Button
        android:id="@+id/btnOpewWiki"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnWiki"
        app:layout_constraintStart_toStartOf="@+id/btnSelectSity"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectSity" />;
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSelectSity"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectSity" />

</androidx.constraintlayout.widget.ConstraintLayout>